--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="quantite">Quantité</string>
     <string name="annuler">Annuler</string>
     <string name="ajouter">Ajouter</string>
+    <string name="lister">Lister</string>
+    <string name="total">Total</string>
+    <string name="menu_open">Ouvrir</string>
+    <string name="menu_close">Fermer</string>
 </resources>
