--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="total">Total</string>
     <string name="menu_open">Ouvrir</string>
     <string name="menu_close">Fermer</string>
+    <string name="gestion_inventaire">Gestion Inventaire</string>
 </resources>
